<resources>
    <string name="app_name">SunShine</string>
    <string name="hello_world">Hello world!</string>
    <!-- Strings related to menus -->
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_refresh" translatable = "false">Refresh</string>
    <string name="action_map" translatable = "false">Map Location</string>
    <string name="action_share" translatable = "false">Share</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">SettingsActivityaaaaa</string>

    <string name="SharePrefrence_fileName">SunShine</string>

    <!-- Strings related to Settings > Location -->
    <!-- Lable for the Location Preference [ CHAR_LIMIT = 30 ] -->
    <string name="perf_Location_lable" translatable = "false">Location</string>
    <!-- Key Name for store Location SharedPreference [ CHAR_LIMIT = NONE ] -->
    <string name="pref_Location_key" translatable = "false">LOCATION</string>
    <!-- Default postal code for Location Preference [ CHAR_LIMIT = NONE ] -->
    <string name="pref_Location_default" translatable = "false">Pune</string>

    <!-- Strings related to Settings > Temprature -->
    <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
    <string name="pref_units_label">Temperature Units</string>
    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_metric">Metric</string>
    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_imperial">Imperial</string>
    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">UNITS</string>
    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_metric" translatable="false">metric</string>
    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_imperial" translatable="false">imperial</string>
</resources>
